Add clipboard export for redirect chains

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -22,7 +22,10 @@
     <template id="redirect-item-template">
       <article class="redirect-item">
         <header class="redirect-item__header">
-          <h2 class="redirect-item__title"></h2>
+          <div class="redirect-item__heading">
+            <h2 class="redirect-item__title"></h2>
+            <button class="redirect-item__copy" type="button">Copy summary</button>
+          </div>
           <div class="redirect-item__meta">
             <span class="redirect-item__timestamp"></span>
             <span class="redirect-item__tab"></span>
