Replace copy summary button with icon

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -24,7 +24,22 @@
         <header class="redirect-item__header">
           <div class="redirect-item__heading">
             <h2 class="redirect-item__title"></h2>
-            <button class="redirect-item__copy" type="button">Copy summary</button>
+            <button
+              class="redirect-item__copy"
+              type="button"
+              title="Copy summary"
+              aria-label="Copy summary"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+                focusable="false"
+              >
+                <path d="M16 22H6a2 2 0 0 1-2-2V6a1 1 0 0 1 2 0v14h10a1 1 0 0 1 0 2" style="fill:currentColor" />
+                <path d="m19.71 5.29-3-3A1.05 1.05 0 0 0 16 2H9a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V6a1 1 0 0 0-.29-.71" style="fill:currentColor" />
+              </svg>
+            </button>
           </div>
           <div class="redirect-item__meta">
             <span class="redirect-item__timestamp"></span>
