Hide media redirects behind noise toggle

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -13,7 +13,7 @@
     <section class="controls">
       <label class="controls__toggle">
         <input id="show-noise" type="checkbox" />
-        <span>Show pixel &amp; analytics requests</span>
+        <span>Show pixel, analytics &amp; media requests</span>
       </label>
       <span id="noise-summary" class="controls__summary" hidden></span>
     </section>
